# CluES

./: .gitignore  CMakeLists.txt  CMakeLists.txt.gbench  README.md  main.cpp
experiments/: Stopwatch.cpp  Stopwatch.h  bm_exp.cpp  run_experiments.py
include/: Makros.h
include/clues/: CETestGraphGenerator.h  main_CE.h
include/clues/heur/: Config.h  Global.h  Solver.h
include/clues/heur/EOCreators/: ComponentExpansion.h
include/clues/heur/StateImprovers/: NEG.h  NodeEdgeGreedy.h  NodeEdgeGreedyNomap.h  NodeEdgeGreedyW1.h  SparseGraphTrimmer.h
include/clues/heur/SwapCandidates/: ComponentExpansionAttraction.h  ComponentExpansionRepulsion.h  SwapCandidate.h  SwpCndEO.h
include/combinatorics/: CombinatoricUtils.h
include/graphs/: GraphInducer.h  GraphUtils.h
include/graphs/generators/: GraphGenerator.h
include/utils/: RandomNumberGenerators.h  StandardUtils.h  TimeMeasurer.h
src/CONTESTS/PACE21/: main_CE.cpp
src/CONTESTS/PACE21/heur/: Global.cpp  Solver.cpp
src/CONTESTS/PACE21/heur/StateImprovers/: NEG.cpp
src/clues/: CETestGraphGenerator.cpp  StatsCollector.cpp  main_CE.cpp  test_graphs.cpp
src/clues/heur/: Cluster.cpp  ClusterGraph.cpp  Config.cpp  ExpansionOrder.cpp  Global.cpp  PaceUtils.cpp  Solver.cpp  State.cpp
src/clues/heur/EOCreators/: ComponentExpansion.cpp
src/clues/heur/StateImprovers/: NEG.cpp  NodeEdgeGreedy.cpp  NodeEdgeGreedyNomap.cpp  NodeEdgeGreedyW1.cpp  SparseGraphTrimmer.cpp
src/clues/heur/SwapCandidates/: ComponentExpansionAttraction.cpp  ComponentExpansionRepulsion.cpp  SwapCandidate.cpp  SwpCndEO.cpp  SwpCndEdge.cpp  SwpCndNode.cpp  SwpCndTriangle.cpp
src/clues/heur/weird_ideas/: VCIterator1.cpp
src/clues/kernelization/: CEKernelizer.cpp  CriticalClique.cpp
src/clues/unit_tests/: test_CEKernelizer.cpp  test_ComponentExpansion.cpp  test_ComponentExpansionAttraction.cpp  test_ComponentExpansionRepulsion.cpp  test_ConvexHullTrickDynamic.cpp  test_NodeEdgeGreedy.cpp  test_Solver.cpp  test_State.cpp  test_SwapCandidate.cpp  test_SwpCndEO.cpp  test_SwpCndEdge.cpp  test_SwpCndNode.cpp  test_SwpCndTriangle.cpp
src/combinatorics/: CombinatoricUtils.cpp
src/graphs/: GraphInducer.cpp  GraphReader.cpp  GraphUtils.cpp
src/graphs/generators/: GraphGenerator.cpp
src/utils/: TimeMeasurer.cpp
